Remove JVM option ZGenerational; support was removed in Java 24.0
Refs: https://openjdk.org/jeps/490